# Scapumerus-DICOM-Viewer

./: .gitattributes  ApplicationData.cpp  ApplicationData.h  CMakeLists.txt  README.md  View2D.cpp  View2D.h  View2D.ui  View3D.cpp  View3D.h  View3D.ui  Widget.cpp  Widget.h  Widget.ui  main.cpp
